@@ -1,3 +1,4 @@
+- Email: added new config property to the emailcomposer to disable the template button (config.disableTemplates)
 - Tasks: Added pagination to the category select combobox
 - Accept YYYYMMDD format when importing vCard with birthdays
 - If fs/Folder fails to copy (because destination might be inside source folder) the already created folder record will be deleted
